--- a/partials/_contact.html
+++ b/partials/_contact.html
@@ -6,9 +6,8 @@
       <h2>Contact Us</h2>
     </header>
     <article class="modal-text">
-
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
-
+      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> | <i class="fa fa-vimeo"></i><a href="https://vimeo.com/anxioustomake" target="_blank"> Vimeo</a></span></p>
     </article>
   </div>        
   <a href="#!" class="closePopUpOutSide"></a>    
