--- a/templates/externalizedistrust.html
+++ b/templates/externalizedistrust.html
@@ -38,6 +38,7 @@
     <!--script or text goes here-->
     <div class="col-xs-12 col-sm-4 col-md-4">
         <p class="title">Script</p>
+        <div class="clipvertical-wrapper">
         <div class="clipvertical">    
             <p class="script">Varun: Hello. I am your distrust in capitalism!
                 <br/><br/>
@@ -58,6 +59,7 @@
                 [Both wave goodbye to the camera]
             </p>
         </div>   
+        </div>
         <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
     </div>
     <!--sample goes here-->
