--- a/templates/fucklabor.html
+++ b/templates/fucklabor.html
@@ -37,6 +37,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Write Scripts, lots of Scripts.</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>
                 INDEX CARD ONE
@@ -54,6 +55,7 @@
                 you will know when to get out.
                 </p>
             </div>   
+            </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/aricegirl/model-my-snake-with-your-message" target="_blank">I will model my pet snake with your message</a></p>
         </div>
 
