--- a/templates/hypnosis.html
+++ b/templates/hypnosis.html
@@ -37,6 +37,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <h1 class="title">Rebuild Trust</h1>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">
                 LETTER TO BBMAGIC
@@ -51,6 +52,7 @@
                 Emily
                 </p>
             </div>   
+            </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
         </div>
 
