--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
   <!-- START: CARDS ROW 1 -->
   <div id="card1" class="card draggable center">
-    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
+    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
   </div>
 
   <div id="card2" class="card draggable center">
@@ -61,7 +61,7 @@
   <div id="card5" class="card draggable center">
     <em>Making Others</em><br/><br/><br/><br/>
     <div class="video-module">
-    <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/><br/>
+    <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
