--- a/templates/nevertalkaboutyourworkagain.html
+++ b/templates/nevertalkaboutyourworkagain.html
@@ -38,10 +38,12 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Never talk about your work again</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>This artwork is about the sharing economy
                 </p>
-            </div>   
+            </div>  
+            </div> 
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
         </div>
 
