--- a/templates/performativeremoval.html
+++ b/templates/performativeremoval.html
@@ -37,6 +37,7 @@
       <!--script or text goes here-->
       <div class="col-xs-12 col-sm-4 col-md-4">
           <p class="title">Are you blocked?</p>
+          <div class="clipvertical-wrapper">
           <div class="clipvertical">    
               <p class="script">SCRIPT<br/><br/>Hey, this is the Doc. 
               <br/><br/>
@@ -56,6 +57,7 @@
               But now it’s all flowing.
               </p>
           </div>   
+          </div>
           <p class="credit">Commissioned from: <a href="https://www.fiverr.com/docbeaker/say-anything-you-want-while-in-the-shower" target="_blank">I will say anything you want while in the shower</a></p>
       </div>
 
