--- a/templates/timemanagement.html
+++ b/templates/timemanagement.html
@@ -37,6 +37,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title"><strong>Improve Performance</strong></p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>
                 “anxious to make” custom audio track for time management.<br/><br/> 
@@ -44,6 +45,7 @@
                 <br/><br/>
                 i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. </p>
             </div>   
+            </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/flexvocals/record-a-250-word-voice-over-in-american-english" target="_blank">I will create your Pro voice over Today</a></p>
         </div>
 
