--- a/templates/twins.html
+++ b/templates/twins.html
@@ -37,6 +37,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Write scripts</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>one. the ad twins<br/>
                 (note: “Liat” is pronounced LEE-AHT -- rhymes with FIAT, the car company)
@@ -183,6 +184,7 @@
                 left: Whoa, these roles, these holes. There is so much digging.
                 </p>
             </div>   
+            </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a> and <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a> and <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a></p>
         </div>
 
