--- a/templates/unfamiliarmaterials.html
+++ b/templates/unfamiliarmaterials.html
@@ -37,6 +37,7 @@
         <!--script or text goes here-->
         <div class="col-xs-12 col-sm-4 col-md-4">
             <p class="title">Are you working with unfamiliar materials?</p>
+            <div class="clipvertical-wrapper">
             <div class="clipvertical">    
                 <p class="script">SCRIPT<br/><br/>Hey. I’ve got to talk to you. Man-to-man. Man-to-person. Because I heard you’re working with unfamiliar materials.
                 <br/><br/>
@@ -45,7 +46,8 @@
                 This iron, though -- I understand it now. This iron and me get along. It’s like the iron and I are one body. Some people say that ironing is a fantastic upper-body workout, but they’re missing the point. Me and this iron – we *are* *one* body. 
                 <br/><br/>
                 Anyway, look. I was once a young boy with crinkled shirts. Irons were unfamiliar materials to me. But now they’re not. I’m telling you this because it can be your story, too. You can do this. Whatever your unfamiliar material is -- it can become a part of you.</p>
-            </div>   
+            </div> 
+            </div>  
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/saavfabb/say-anything-you-want-in-a-video-while-ironing" target="_blank">I will say Anything You Want While Ironing In A HD Video, In Italian, English, Spanish</a></p>
         </div>
 
