--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -13,69 +13,34 @@
     
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <style>
-        .title {
-            display: block;
-            text-align: center;
-            font-size: 4em;
-            font-family: sans-serif;
-            font-weight: bold;
-            padding: 0;
-            margin-bottom: 50px;
-            color: #FF0179;
-          }
-        .document {
-            margin-bottom: 10px;
-        }  
-        .document span{
-            font-family: sans-serif;
-            font-weight: bold;
-            font-size: .9em;
-            margin-top: 0%;
-            left: 15%; 
-            display: inline-block;
-            position: absolute;
-            z-index: 999;
-            padding-right: 30px;
-        }  
-        .document a,
-        .document a:visited {
-          color: black;
-          text-decoration: none;
-        }
-        .document a:hover {
-          color: #FF0179;
-          text-decoration: none;
-        }
-        @media screen and (max-width: 768px) {
-           .title {
-            font-size: 2.5em;
-           }
-        }
+@@include('../partials/_social.html')
+@@include('../partials/_css.html')  
 
-    </style>
-    
-    <script type="text/javascript" src="js/analytics.js"></script>
   </head>
 
-  <body>
+  <body class="subcategory">
+@@include('../partials/_contact.html')
+@@include('../partials/_about.html')
+@@include('../partials/_nav.html')
+@@include('../partials/_header.html')
 
+    <!--START: MAIN CONTENT-->
     <div class="container">
         <div class="row">
           <h1 class="title">Our Quizzes and Surveys</h1>
-          <div class="col-xs-6 col-sm-4 col-sm-offset-2 document">
+          <div class="col-xs-6 col-sm-4 col-sm-offset-2 document question">
             <a href="moneyquiz.html">
             <img src="img/quiz.jpg" class="img-responsive" alt="Would Money Be All I Really Need to Succeed?"><span>Would Money Be All I Really Need to Succeed?</span></a>
           </div>
-          <div class="col-xs-6 col-sm-4 document">
+          <div class="col-xs-6 col-sm-4 document question">
             <a href="makingyou.html">
             <img src="img/quiz.jpg" class="img-responsive" alt="Important Research: Making You"><span>Important Research: <em>Making You</em> Survey</span></a>
           </div>
         </div>
     </div>
+    <!--END: MAIN CONTENT-->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+@@include('../partials/_js.html')
   </body>
 
 </html>
