--- a/templates/temporaryartreview.html
+++ b/templates/temporaryartreview.html
@@ -23,7 +23,7 @@
 
 <!--START: MAIN CONTENT-->
 <div class="main-content">
-  <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; top:40px; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+  <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </div>
 <!--END: MAIN CONTENT-->
 
