added open ambiguity

--- a/templates/futureofwork.html
+++ b/templates/futureofwork.html
@@ -61,7 +61,13 @@
         <!-- <h1 class="title">Interviews with Fiverr.com Testimonial Actors</h1> -->
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>       
+        </div>
+        <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
+        <br/></br/>
+        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product. In the majority of cases, these are products they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
+        <br/></br/>
+        The actors we hired were not given a script. Instead, they were presented with a series of questions about jobs, the sharing economy, and the future of work. To our knowledge, the following responses reflect the personal views and experiences of these workers.
+        </p>       
     </div>
 
   
