--- a/templates/openambiguity.html
+++ b/templates/openambiguity.html
@@ -148,26 +148,26 @@
         <br/><br/><br/>
         <strong>REFERENCE / CREDITS</strong>
         <br/><br/>
-        Stallman, Richard. “GNU/Linux FAQ”. GNU Operating System. <a href="http://gnu.org/gnu/gnu-linux-faq.en.html#divide" target="_blank">gnu.org/gnu/gnu-linux-faq.en.html#divide</a>
+        Stallman, Richard. “GNU/Linux FAQ”. <em>GNU Operating System</em>. <a href="http://gnu.org/gnu/gnu-linux-faq.en.html#divide" target="_blank">gnu.org/gnu/gnu-linux-faq.en.html#divide</a>
         <br/><br/>
         Wikipedia. “Open Source.” <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">en.wikipedia.org/wiki/Open-source_software</a>
         <br/><br/>
-        Stallman, Richard. “When Open Source Misses the Point of Free Software”. GNU Operating System. <a href="http://gnu.org/philosophy/open-source-misses-the-point.en.html" target="_blank">gnu.org/philosophy/open-source-misses-the-point.en.html</a>
+        Stallman, Richard. “When Open Source Misses the Point of Free Software”. <em>GNU Operating System</em>. <a href="http://gnu.org/philosophy/open-source-misses-the-point.en.html" target="_blank">gnu.org/philosophy/open-source-misses-the-point.en.html</a>
         <br/><br/>
-        Morozov, Evgeny. “Open and Closed.” The New York Times: Op Ed. March 16, 2013.
+        Morozov, Evgeny. “Open and Closed.” <em>The New York Times: Op Ed</em>. March 16, 2013.
         <a href="http://nytimes.com/2013/03/17/opinion/sunday/morozov-open-and-closed.html" target="_blank">nytimes.com/2013/03/17/opinion/sunday/morozov-open-and-closed.html</a>
         <br/><br/>
-        Levi, Ran. “Richard Stallman & The History of Free Software and Open Source.” Curious Minds Podcast. June 27, 2016. <a href="http://cmpod.net/all-transcripts/history-open-source-free-software-text/" target="_blank">cmpod.net/all-transcripts/history-open-source-free-software-text/</a>
+        Levi, Ran. “Richard Stallman & The History of Free Software and Open Source.” <em>Curious Minds Podcast</em>. June 27, 2016. <a href="http://cmpod.net/all-transcripts/history-open-source-free-software-text/" target="_blank">cmpod.net/all-transcripts/history-open-source-free-software-text/</a>
         <br/><br/>
-        Bauwens, Michel. “The Cooperative Model Revisited.” Commons Transition. Dec 15, 2014.
+        Bauwens, Michel. “The Cooperative Model Revisited.” <em>Commons Transition</em>. Dec 15, 2014.
         <a href="http://commonstransition.org/the-cooperative-model-revisited-michel-bauwens/" target="_blank">commonstransition.org/the-cooperative-model-revisited-michel-bauwens/</a>
         <br/><br/>
         Slee, Tom. What’s Yours is Mine: Against the Sharing Economy. OR Books, 2016.
         <a href="http://orbooks.com/catalog/whats-yours-is-mine-by-tom-slee/" target="_blank">orbooks.com/catalog/whats-yours-is-mine-by-tom-slee/</a>
         <br/><br/>
-        Jordan, Marvin. Interview with Hito Steyerl. “Hito Steyerl: Politics of Post-Representation”. Dis Magazine. <a href="http://dismagazine.com/disillusioned-2/62143/hito-steyerl-politics-of-post-representation/" target="_blank">dismagazine.com/disillusioned-2/62143/hito-steyerl-politics-of-post-representation/</a>
+        Jordan, Marvin. Interview with Hito Steyerl. “Hito Steyerl: Politics of Post-Representation”. <em>Dis Magazine</em>. <a href="http://dismagazine.com/disillusioned-2/62143/hito-steyerl-politics-of-post-representation/" target="_blank">dismagazine.com/disillusioned-2/62143/hito-steyerl-politics-of-post-representation/</a>
         <br/><br/>
-        Wood, Brian Kuan. "Is It Love?" e-flux Journal. 2014.
+        Wood, Brian Kuan. "Is It Love?" <em>e-flux Journal</em>. 2014.
         <a href="http://e-flux.com/journal/is-it-love/" target="_blank">e-flux.com/journal/is-it-love/</a>
         </p>       
     </div>
