annotated script for osf

--- a/css/app.css
+++ b/css/app.css
@@ -928,7 +928,10 @@ a#openPopUp:hover{
 .popup .fa {
   color: #FF0179;
 }
-
+.popup .bio {
+  width: 200px;
+  padding:  20px 0;
+}
 /*=====================================
 =            media queries            =
 =====================================*/
