added platform coop ref

--- a/templates/openambiguity.html
+++ b/templates/openambiguity.html
@@ -169,6 +169,14 @@
         <br/><br/>
         [9] Wood, Brian Kuan. "Is It Love?" <em>e-flux Journal</em>. 2014.
         <a href="http://e-flux.com/journal/is-it-love/" target="_blank">e-flux.com/journal/is-it-love/</a>
+        <br/><br/><br/>
+        <strong>FURTHER READING</strong>
+        <br/><br/>
+        <a href="http://internetofownership.net/" target="_blank">The Internet of Ownership: a directory for the online democratic ecosystem</a> <em>The Internet of Ownership</em>.
+        <br/><br/>
+        Schneider, Nathan. <a href="http://internetofownership.net/2016/05/21/platform-cooperativism-as-a-critique-of-open-source/" target="_blank">"Platform Cooperativism as a Critique of Open-Source."</a> <em>The Internet of Ownership</em>.
+        <br/><br/>
+        Scholz, Trebor. <a href="http://www.rosalux-nyc.org/wp-content/files_mf/scholz_platformcooperativism21.pdf" target="_blank">"Platform Cooperativism: Challenging the Corporate Sharing Economy"</a>
         </p>       
     </div>
  
