--- a/templates/openambiguity.html
+++ b/templates/openambiguity.html
@@ -52,7 +52,7 @@
 
   <div class="row">  
     <!--script or text goes here-->
-    <div class="col-xs-12 col-sm-4 col-md-4">
+    <div class="col-xs-12 col-sm-4">
         <p class="title">Script</p>
         <div class="clipvertical-wrapper">
         <div class="clipvertical">    
@@ -134,7 +134,7 @@
         <p class="credit">Commissioned from: <a href="https://www.fiverr.com/voiceoverpete" target="_blank">I will be your American Male Website Spokesman</a></p>
     </div>
     <!--sample goes here-->
-    <div class="col-xs-12 col-sm-8 col-md-8">
+    <div class="col-xs-12 col-sm-8">
         <!-- <h1 class="title">Interviews with Fiverr.com Testimonial Actors</h1> -->
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/177629356?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
