--- a/partials/_nav.html
+++ b/partials/_nav.html
@@ -104,7 +104,7 @@
         <li>
           <a href="twins.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
           </a>
         </li>
         <li>
