--- a/templates/index.html
+++ b/templates/index.html
@@ -53,16 +53,16 @@
   </div>
 
   <div id="card4" class="card draggable center">
-    <em>Making Others</em><br/><br/><br/><br/>
-    <div class="video-module">
-    <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/>
+    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
   <div id="card5" class="card draggable center">
-    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
+    <img class="new" src="img/new.gif"/>
+    <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
+    <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
+    <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
   </div>
 
   <div id="card6" class="card draggable center">
@@ -107,6 +107,8 @@
       <strong>11.2016</strong> <em>Anxious to Make</em>, <a href="http://www.b4bel4b.com/" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
       <br/><br/>
       <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
+      <br/><br/>
+      <strong>09.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, "The Institute for New Feeling / FELT BOOK" (screening), <a href="http://nyartbookfair.com/" target="_blank">NY Art Book Fair</a>, MoMA PS1, Long Island City, NY
       <br/><br/>
       <strong>05.2016</strong> <em>Making You</em>, <a href="https://www.facebook.com/events/1597218800596638/" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, werkärtz, Los Angeles, CA
       <br/><br/>
