--- a/templates/rhizome.html
+++ b/templates/rhizome.html
@@ -57,6 +57,7 @@
       <div class="magnify">
         <div class="large"></div>
         <img class="small img-responsive" src="img/rhizome-revolution.jpg"/>
+        mouse over image to zoom <span class="fa fa-search"></span> 
       </div>
       
       <h3>Proposal</h3>
