--- a/templates/rhizome.html
+++ b/templates/rhizome.html
@@ -43,7 +43,7 @@
   <div class="row">
     <!--main content header-->
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading">How to Commission a Revolution in 3 Easy Steps</h1>
+      <h1 class="pageheading">How to Commission a Revolution<br/><small>in 3 Easy Steps</small></h1>
     </div>
     <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
       <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
