--- a/templates/index.html
+++ b/templates/index.html
@@ -42,42 +42,38 @@
   </div>
 
   <div id="card2" class="card draggable center">
-    <em>Confidence Generator</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card3" class="card draggable center rituals">
-    <em>Rituals for Removing<br/>Creative Blocks</em><br/>
-    <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
-  </div>
-
-  <div id="card4" class="card draggable center">
-    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card5" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
     <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
     <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
   </div>
 
-  <div id="card6" class="card draggable center">
+  <div id="card3" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Lecture</small>
+  </div>
+
+  <div id="card4" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, testimonials</small>
   </div>
 
-  <div id="card7" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
-    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Lecture</small>
+  <div id="card5" class="card draggable center">
+    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
   </div>
+
+  <div id="card6" class="card draggable center cse">
+    <img class="new" src="img/new.gif"/>
+    Center for the Sharing Economy (CSE)<br/><br/>
+    <a href="cse.html"><img class="img-responsive" src="img/cse-ad-1.png"></a>
+  </div>
+
   <!-- END: CARDS ROW 1 -->
 
   <!-- START: CARDS ROW 2 -->
@@ -102,13 +98,14 @@
   </div>
 
   <div id="card10" class="card draggable news">
+    <img class="new" src="img/new.gif"/>
     <div class="center">News</div><br/>
     <small>
       <strong>11.2016</strong> <em>Anxious to Make</em>, <a href="http://www.b4bel4b.com/" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
       <br/><br/>
-      <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
+      <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/videomedeja-2016-en/screening-2016/liat-berdugo-emily-martinez-as-five-twins/?lang=en" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
       <br/><br/>
-      <strong>09.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, "The Institute for New Feeling / FELT BOOK" (screening), <a href="http://nyartbookfair.com/" target="_blank">NY Art Book Fair</a>, MoMA PS1, Long Island City, NY
+      <strong>09.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, "The Institute for New Feeling / FELT BOOK" (screening), <a href="http://nyartbookfair.com/events/#The_classroom" target="_blank">Printed Matter's NY Art Book Fair</a>, MoMA PS1, Long Island City, NY
       <br/><br/>
       <strong>05.2016</strong> <em>Making You</em>, <a href="https://www.facebook.com/events/1597218800596638/" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, werkärtz, Los Angeles, CA
       <br/><br/>
@@ -130,21 +127,33 @@
     </small>    
   </div>
 
-  <div id="card9" class="card draggable center sweepstakes">
-    <img class="new" src="img/new.gif"/>
-    Sweepstakes<br/><br/><br/><br/>
-    <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-trophy2.gif"></a>
-    <br/><br/>
-    <small>Enter to Win!</small>
-  </div>
-
-  <div id="card8" class="card draggable center">
+  <div id="card9" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     Store<br/><br/><br/>
     <a href="store.html" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
     <small></small>
   </div>
+
   <!-- END: CARDS ROW 2 -->
+
+  <!--   <div id="card2" class="card draggable center">
+    <em>Confidence Generator</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card3" class="card draggable center rituals">
+    <em>Rituals for Removing<br/>Creative Blocks</em><br/>
+    <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
+  </div> -->
+
+  <!--   <div id="card9" class="card draggable center sweepstakes">
+    <img class="new" src="img/new.gif"/>
+    Sweepstakes<br/><br/><br/><br/>
+    <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-trophy2.gif"></a>
+    <br/><br/>
+    <small>Enter to Win!</small>
+  </div> -->
 
   <!--   <div id="card17" class="card draggable center critical-texts">
     Texts<br/><br/>
