--- a/templates/commissions.html
+++ b/templates/commissions.html
@@ -25,6 +25,10 @@
         <div class="row">
           <h1 class="title">Our Commissions</h1>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="openambiguity.html">
+            <img src="img/document.jpg" class="img-responsive" alt="Open Ambuguity"><span>Open Ambuguity</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="futureofwork.html">
             <img src="img/document.jpg" class="img-responsive" alt="Future of Work, Testimonials (Pt.1)"><span>The Future of Work, Testimonials (Pt.1)</span></a>
           </div>
